--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github battle",
+  "name": "github_battle",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,8 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start"
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
