--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "build": "NODE_ENV='production' webpack"
   },
   "keywords": [],
   "author": "",
